Grilla de videos
Se crea grilla de videos.
Pendientes detalles.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,56 @@
         </div>
     </section>
 
+    <main class="videos">
+        <div class="container">
+            <div class="row">
+              <div class="col-sm pb-4">
+                <img src="/assets/images/image-1.png" alt="" class="videos__thumbail">
+                <p class="videos__title">Después de la vela - Yuki Mukami</p>
+                <p class="videos__stadistics">16k visitas - 1 semana atrás</p>
+              </div>
+              <div class="col-sm pb-4">
+                <img src="/assets/images/image-2.png" alt="" class="videos__thumbail">
+                <p class="videos__title">Far Away - Yuki Mukami</p>
+                <p class="videos__stadistics">100k visitas - 1 mes atrás</p>
+              </div>
+              <div class="col-sm pb-4">
+                <img src="/assets/images/image-3.png" alt="" class="videos__thumbail">
+                <p class="videos__title">City - Yuki Mukami</p>
+                <p class="videos__stadistics">20k visitas - 1 mesatrás</p>
+              </div>
+              <div class="col-sm pb-4">
+                <img src="/assets/images/image-4.png" alt="" class="videos__thumbail">
+                <p class="videos__title">A Yuki Tale - Yuki Mukami</p>
+                <p class="videos__stadistics">1m visitas - 1 atrás atrás</p>
+              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm pb-4">
+                  <img src="/assets/images/image-5.png" alt="" class="videos__thumbail">
+                  <p class="videos__title">Mapocho - Yuki Mukami</p>
+                  <p class="videos__stadistics">100k visitas - 1 mes atrás</p>
+                </div>
+                <div class="col-sm pb-4">
+                  <img src="/assets/images/image-6.png" alt="" class="videos__thumbail">
+                  <p class="videos__title">Después de la vela - Yuki Mukami</p>
+                  <p class="videos__stadistics">40k visitas - 3 meses atrás</p>
+                </div>
+                <div class="col-sm pb-4">
+                  <img src="/assets/images/image-7.png" alt="" class="videos__thumbail">
+                  <p class="videos__title">Después de la vela - Yuki Mukami</p>
+                  <p class="videos__stadistics">10k visitas - 4 meses atrás</p>
+                </div>
+                <div class="col-sm pb-4">
+                    <img src="/assets/images/image-8.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">Después de la vela - Yuki Mukami</p>
+                    <p class="videos__stadistics">40k visitas - 3 meses atrás</p>
+                  </div>
+              </div>
+          </div>
+    </main>
+
 </body>
 
 </html>
