--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/49b435f928.js" crossorigin="anonymous"></script>
     <!-- Estilo -->
@@ -28,11 +27,15 @@
                 <i class="navbar__icon fas fa-video"></i>
                 <i class="navbar__icon fas fa-plus"></i>
                 <i class="navbar__icon fas fa-bell"></i>
+                <i class="navbar__icon navbar__icon--menu fas fa-bars"></i>
             </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <div class="navbar__icons d-none d-block d-sm-none">
+                <i class="navbar__icon navbar__icon--menu fas fa-bars"></i>
+            </div>
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
 
             <!-- <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
@@ -53,7 +56,7 @@
         </div>
     </nav>
 
-    <header class="header"></header>
+    <header class="header "></header>
 
     <section class="profile border-bottom">
         <div class="container profile__container">
@@ -80,51 +83,51 @@
     <main class="videos">
         <div class="container">
             <div class="row">
-              <div class="col-sm pb-4">
-                <img src="/assets/images/image-1.png" alt="" class="videos__thumbail">
-                <p class="videos__title">Después de la vela - Yuki Mukami</p>
-                <p class="videos__stadistics">16k visitas - 1 semana atrás</p>
-              </div>
-              <div class="col-sm pb-4">
-                <img src="/assets/images/image-2.png" alt="" class="videos__thumbail">
-                <p class="videos__title">Far Away - Yuki Mukami</p>
-                <p class="videos__stadistics">100k visitas - 1 mes atrás</p>
-              </div>
-              <div class="col-sm pb-4">
-                <img src="/assets/images/image-3.png" alt="" class="videos__thumbail">
-                <p class="videos__title">City - Yuki Mukami</p>
-                <p class="videos__stadistics">20k visitas - 1 mesatrás</p>
-              </div>
-              <div class="col-sm pb-4">
-                <img src="/assets/images/image-4.png" alt="" class="videos__thumbail">
-                <p class="videos__title">A Yuki Tale - Yuki Mukami</p>
-                <p class="videos__stadistics">1m visitas - 1 atrás atrás</p>
-              </div>
+                <div class="col-sm pb-4">
+                    <img src="/assets/images/image-1.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">Después de la vela - Yuki Mukami</p>
+                    <p class="videos__stadistics">16k visitas - 1 semana atrás</p>
+                </div>
+                <div class="col-sm pb-4">
+                    <img src="/assets/images/image-2.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">Far Away - Yuki Mukami</p>
+                    <p class="videos__stadistics">100k visitas - 1 mes atrás</p>
+                </div>
+                <div class="col-sm pb-4">
+                    <img src="/assets/images/image-3.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">City - Yuki Mukami</p>
+                    <p class="videos__stadistics">20k visitas - 1 mesatrás</p>
+                </div>
+                <div class="col-sm pb-4">
+                    <img src="/assets/images/image-4.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">A Yuki Tale - Yuki Mukami</p>
+                    <p class="videos__stadistics">1m visitas - 1 atrás atrás</p>
+                </div>
             </div>
 
             <div class="row">
                 <div class="col-sm pb-4">
-                  <img src="/assets/images/image-5.png" alt="" class="videos__thumbail">
-                  <p class="videos__title">Mapocho - Yuki Mukami</p>
-                  <p class="videos__stadistics">100k visitas - 1 mes atrás</p>
+                    <img src="/assets/images/image-5.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">Mapocho - Yuki Mukami</p>
+                    <p class="videos__stadistics">100k visitas - 1 mes atrás</p>
                 </div>
                 <div class="col-sm pb-4">
-                  <img src="/assets/images/image-6.png" alt="" class="videos__thumbail">
-                  <p class="videos__title">Después de la vela - Yuki Mukami</p>
-                  <p class="videos__stadistics">40k visitas - 3 meses atrás</p>
+                    <img src="/assets/images/image-6.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">Luky Days - Yuki Mukami</p>
+                    <p class="videos__stadistics">40k visitas - 3 meses atrás</p>
                 </div>
                 <div class="col-sm pb-4">
-                  <img src="/assets/images/image-7.png" alt="" class="videos__thumbail">
-                  <p class="videos__title">Después de la vela - Yuki Mukami</p>
-                  <p class="videos__stadistics">10k visitas - 4 meses atrás</p>
+                    <img src="/assets/images/image-7.png" alt="" class="videos__thumbail">
+                    <p class="videos__title">30 days in My House</p>
+                    <p class="videos__stadistics">10k visitas - 4 meses atrás</p>
                 </div>
                 <div class="col-sm pb-4">
                     <img src="/assets/images/image-8.png" alt="" class="videos__thumbail">
-                    <p class="videos__title">Después de la vela - Yuki Mukami</p>
+                    <p class="videos__title">Santiago - Yuki Mukami</p>
                     <p class="videos__stadistics">40k visitas - 3 meses atrás</p>
-                  </div>
-              </div>
-          </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 </body>
